[package]
name = "freeform"
version = "0.1.1"
repository = "https://github.com/Testare/n_dit_secret"
authors = ["Testare <testare.i9z@gmail.com>"]
edition = "2021"
description = "A small library for being able to store free-form data"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_reflect = "0.13.2"
ron = "0.8.1"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.115"
thiserror = "1.0.58"
toml = "0.8.12"
typed_key = "0.1.1"
