[package]
name = "freeform"
version = "0.3.0"
repository = "https://github.com/Testare/n_dit_secret"
authors = ["Testare <testare.i9z@gmail.com>"]
edition = "2021"
description = "A small library for being able to store free-form data"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_reflect = "0.13.2"
serde = {version = "1.0.197", features = ["derive"]}
thiserror = "1.0.58"
typed_key = "0.1.1"
ron = { version = "0.8.1", optional = true }
serde_json = { version = "1.0.115", optional = true }
toml = { version = "0.8.12", optional = true }

[features]
default = ["json"]
json = ["dep:serde_json"]
ron = ["dep:ron"]
toml = ["dep:toml"]

